<resources>
    <string name="app_name">eLedgerv3</string>
    <string name="home">Home</string>
    <string name="Ledger">Ledger</string>
    <string name="Visualize">Visualize</string>
    <string name="History">History</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">enter amount</string>
    <string name="what_s_this_spent_for">enter a description</string>
    <string name="enter_the_amount">enter the amount</string>
    <string name="select_category">select category</string>


    <string name="food">FOOD</string>
    <string name="shopping">SHOPPING</string>
    <string name="phone">PHONE</string>
    <string name="health">HEALTH</string>
    <string name="groceries">GROCERIES</string>
    <string name="travel">TRAVEL</string>
    <string name="fuel">FUEL</string>
    <string name="education">EDUCATION</string>
    <string name="electricity">ELECTRICITY</string>
    <string name="bills">BILLS</string>
    <string name="housing">HOUSING</string>
    <string name="other">OTHER</string>
    <string name="select_type">select type</string>
    <string name="add">ADD</string>
    <string name="select_date_and_time">select date and time</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="select_date">select date</string>
    <string name="select_time">select time</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="transactions_history">Transactions History</string>
    <string name="enter_amount_for_bill_split">Enter amount</string>
    <string name="continue_the_old_trip">Continue the old trip</string>
    <string name="new_trip">new trip</string>
    <string name="add_member">add a member</string>
    <string name="pay">Pay</string>
    <string name="show_all_payments">show all payments</string>
    <string name="split_the_bill">split the bill</string>
    <string name="enter_name">enter a name</string>
    <string name="total_bal">Total Bal : ₹</string>
    <string name="split_bill">split bill</string>
    <string name="hey">hey</string>
    <string name="now_visualize_your_data_in_charts">now visualize your data in charts</string>
    <string name="maintain_a_record_of_bills_in_a_trip">maintain a record of bills in a trip</string>
    <string name="split_and_maintain_n_t_t_bills_in_trips">Split and Maintain \n Bills in Trips</string>
    <string name="all_transactions">All Transactions</string>
    <string name="save">save</string>
    <string name="download_statement">Download statement</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="todo">TODO</string>

</resources>