<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/option_1"
        android:title="@string/food" />
    <item
        android:id="@+id/option_2"
        android:title="@string/shopping" />
    <item
        android:id="@+id/option_3"
        android:title="@string/phone" />
    <item
        android:id="@+id/option_4"
        android:title="@string/health" />
    <item
        android:id="@+id/option_5"
        android:title="@string/groceries" />
    <item
        android:id="@+id/option_6"
        android:title="@string/travel" />
    <item
        android:id="@+id/option_7"
        android:title="@string/fuel" />
    <item
        android:id="@+id/option_8"
        android:title="@string/education" />
    <item
        android:id="@+id/option_9"
        android:title="@string/electricity" />
    <item
        android:id="@+id/option_10"
        android:title="@string/bills" />
    <item
        android:id="@+id/option_11"
        android:title="@string/housing" />
    <item
        android:id="@+id/option_12"
        android:title="@string/other" />

</menu>