<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    tools:context=".Home">

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_member"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pay"
        android:layout_width="395dp"
        android:layout_height="55dp"
        android:layout_below="@+id/add"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:text="@string/pay"
        android:textSize="20sp" />

    <Button
        android:id="@+id/transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pay"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:text="@string/show_all_payments"
        android:textSize="20sp" />

    <Button
        android:id="@+id/split"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transactions"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:text="@string/split_the_bill"
        android:textSize="20sp"

        />
</RelativeLayout>